--- a/index.html
+++ b/index.html
@@ -1,1 +1,62 @@
-Hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>PhenoPath - covariate-adjusted pseudotime</title>
+
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+
+  <link href="narrow-jumbotron.css" rel="stylesheet">
+
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+    <!-- Google analytics -->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      
+        ga('create', 'UA-61354538-2', 'auto');
+        ga('send', 'pageview');
+      
+</script>
+</head>
+<body>
+    <div class="container">
+        <div class="row marketing">
+            <div class="col-sm-8">
+                <h3> PhenoPath vignettes </h3>
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        <a href="introduction_to_phenopath.html"> <strong>Introduction to PhenoPath</strong> </a> 
+                        <p>
+                            This vignette walks through a PhenoPath analysis on a synthetic data set with an overview of the major steps involved in the analysis.
+                        </p>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                            <a href="phenopath_shalek_vignette.html"> <strong>Covariate-adjusted pseudotime analysis of Shalek et al. (2014) using PhenoPath</strong> </a>
+                            <p>
+                                This vignette provides an end-to-end analysis of the Shalek et al. (2014) dataset of time-series dendritic cells under stimulation, starting with 
+                                the raw data from the <a href="http://imlspenticton.uzh.ch:3838/conquer/">conquer</a> project and finishing with detecting pseudotime-stimulant interactions.
+                            </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
